# mpfw_code_libs_sdk_stm32f769_disco

./: LICENSED_CODE  LICENSES_THIRD_PARTY  LICENSE_HEADER
doc/note/: 20230405_temporary_notes.txt
src/sdk/sdkInterrupt/v_00/: sdkInterruptManager.c  sdkInterruptManager.h  sdkInterruptTbl.h  sdkInterruptUnit.c  sdkInterruptUnit.h
src/sdk/sdkInterrupt/v_00/config/: www_sdkInterruptTbl.c
src/sdk/sdkMpu/v_00/: sdkMpu.c  sdkMpu.h
src/v_02/Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_uart.h
src/v_03/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_uart.c
src/v_04/Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_uart.h
wsp/cmake/project/: CMakeLists.txt  include_dependencies.cmake  set_cpp_files_v_00.cmake  set_cpp_files_v_01.cmake
wsp/cmake/project/public/: 01_set_root_dirs.cmake  05_set_obj_lib_build_dirs.cmake  toolchain_compile_option.cmake
wsp/cmake/project/v_03/: CMakeLists.txt
wsp/cmake/project/v_03/public/: 02_set_ver_dir.cmake  03_set_inc_dirs_v_00.cmake  set_prj_dir.cmake  zzz_01_set_root_dirs.cmake
wsp/cmake/project/v_04/: CMakeLists.txt
wsp/cmake/project/v_04/public/: 03_set_inc_dirs.cmake  set_lib_sdk_platform_name.cmake  set_prj_dir.cmake  toolchain_link_option.cmake
wsp/cmake/project/v_05/: set_cpp_files.cmake
wsp/cmake/project/v_05/public/: 02_set_prj_dir.cmake  03_set_inc_dirs.cmake  toolchain_link_option.cmake
wsp/cmake/project/v_06/: CMakeLists.txt  include_dependencies.cmake  set_cpp_files.cmake
wsp/cmake/project/v_06/public/: 01_set_root_dirs.cmake  03_set_inc_dirs.cmake  05_set_obj_lib_build_dirs.cmake  toolchain_compile_option.cmake
wsp/cmake/project/v_07/: CMakeLists.txt  set_cpp_files.cmake
wsp/cmake/project/v_07/public/: 03_set_inc_dirs.cmake  set_lib_sdk_platform_name.cmake  toolchain_link_option.cmake
wsp/cube/sdk_stm32f769_disco/: .cproject  .eclipse_cproject_patch  .gitignore  .project
